--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -5,3 +5,4 @@
 <%= link_to "Done",
   recipe_path(@recipe),
   data: {turbo_method: :delete, turbo_confirm: "Bon appetit"}%>
+   <%# supprime la recette quand elle est faite, faire en sorte de supprimer les ingrédients utilisés avec ce même bouton%>
