--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,6 +4,10 @@
   <%= f.error_notification %>
 
   <div class="form-inputs">
+    <%= f.input :name,
+                required: true,
+                autofocus: true,
+                input_html: { autocomplete: "name" }%>
     <%= f.input :email,
                 required: true,
                 autofocus: true,
@@ -15,6 +19,12 @@
     <%= f.input :password_confirmation,
                 required: true,
                 input_html: { autocomplete: "new-password" } %>
+    <%= f.input :diet,
+                required: false,
+                input_html: { autocomplete: "diet" } %>
+    <%= f.input :allergies,
+                required: false,
+                input_html: { autocomplete: "allergies" } %>
   </div>
 
   <div class="form-actions">
