--- a/app/views/fridges/index.html.erb
+++ b/app/views/fridges/index.html.erb
@@ -1,34 +1,50 @@
 <div class="container">
-  <div class="d-flex justify-content-between">
-    <div>
-      <ul>
-      <% @fridge.ingredients.each do |ingredient| %>
-        <li><%= ingredient.name %></li>
-      <% end %>
-      </ul>
+  <div class="hero-section">
+    <h2>My Fridge</h2>
+    <p>Manage your ingredients and utensils</p>
+  </div>
+
+  <div class="fridge-content">
+    <div class="fridge-section ingredients-section">
+      <h3>My ingredients</h3>
+      <div class="items-list">
+        <ul>
+        <% @fridge.ingredients.each do |ingredient| %>
+          <li class="ingredient-item">
+            <span class="ingredient-name"><%= ingredient.name %></span>
+            <span class="ingredient-qty"><%= ingredient.quantity %></span>
+          </li>
+
+          </li>
+        <% end %>
+        </ul>
+      </div>
     </div>
-    <div>
-      <div class="d-flex">
+    <div class="forms-container">
+      <div class="form-section">
         <%= simple_form_for [@fridge, @ingredient] do |f| %>
-          <%= f.input :name, placeholder: "Carrot", wrapper_html: { class: 'd-flex' } %>
-          <%= f.input :quantity, placeholder: "1", wrapper_html: { class: 'd-flex' } %>
-          <%= f.submit %>
+          <%= f.input :name, placeholder: "Add an ingredient", label: false %>
+          <%= f.input :quantity, placeholder: "Quantity", label: false %>
+          <%= f.submit "Add", class: "btn-primary" %>
         <% end %>
       </div>
-      <div>
-        <div>
-          <%= simple_form_for [@fridge, @ustensil] do |f| %>
-            <%= f.input :name, collection: Ustensil::USTENSIL, prompt: "Choose your owned ustensil" %>
-            <%= f.submit %>
-          <% end %>
-        </div>
-        <div>
+
+      <div class="fridge-section utensils-section">
+        <h3>My ustensils</h3>
+        <div class="items-list">
           <ul>
           <% @fridge.ustensils.each do |ustensil| %>
             <li><%= ustensil.name %></li>
           <% end %>
           </ul>
         </div>
+      </div>
+
+      <div class="form-section">
+        <%= simple_form_for [@fridge, @ustensil] do |f| %>
+          <%= f.input :name, collection: Ustensil::USTENSIL, prompt: "Add a ustensil", label: false %>
+          <%= f.submit "Add", class: "btn-primary" %>
+        <% end %>
       </div>
     </div>
   </div>
