--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -2,3 +2,21 @@
   <%= f.input :content %>
   <%= f.button :submit %>
 <% end %>
+
+<div id="messages">
+  <% @chat.messages.each do |message| %>
+    <% if message.role == "user" %>
+      <div class="d-flex justify-content-end mb-2">
+        <div class="bg-white px-3 pb-0 pt-3 rounded-pill">
+          <%= message.content %>
+        </div>
+      </div>
+    <% elsif message.role == "assistant" %>
+      <div class="d-flex justify-content-start mb-5">
+        <div class="px-3 pb-0 pt-3">
+          <%= message.content %>
+        </div>
+      </div>
+    <% end %>
+  <% end %>
+</div>
