--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,8 +1,12 @@
 <h1>Todays recipe</h1>
 
-<p><%= @recipe.content %></p>
+<h1><%= @recipe.title %></h1>
+
+<div>
+  <%= raw(render_markdown(@recipe.content)) rescue simple_format(@recipe.content) %>
+</div>
 
 <%= link_to "Done",
   recipe_path(@recipe),
-  data: {turbo_method: :delete, turbo_confirm: "Bon appetit"}%>
+  data: { turbo_method: :delete, turbo_confirm: "Bon appétit" } %>
    <%# supprime la recette quand elle est faite, faire en sorte de supprimer les ingrédients utilisés avec ce même bouton%>
