--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -1,28 +1,11 @@
 <div class="d-flex flex-column h-100">
 
   <div id="messages" class="overflow-y-auto">
-    <% @chat.messages.each do |message| %>
-      <% if message.role == "user" %>
-        <div class="d-flex justify-content-end mb-2">
-          <div class="bg-white px-3 pb-0 pt-3 rounded-pill">
-            <%= message.content %>
-          </div>
-        </div>
-      <% elsif message.role == "assistant" %>
-        <div class="d-flex justify-content-start mb-5">
-          <div class="px-3 pb-0 pt-3">
-              <%= raw(render_markdown(message.content)) rescue simple_format(message.content) %>
-          </div>
-        </div>
-      <% end %>
-    <% end %>
+    <%= render "messages/messages", messages: @chat.messages %>
   </div>
 
-  <div class="flex-grow-1">
-    <%= simple_form_for [@chat, @message] do |f| %>
-      <%= f.input :content %>
-      <%= f.button :submit %>
-    <% end %>
+  <div class="flex-grow-1" id="new_message_container">
+    <%= render "messages/form", chat: @chat, message: @message %>
   </div>
 
 </div>
