--- a/app/views/shared/_navBar.html.erb
+++ b/app/views/shared/_navBar.html.erb
@@ -21,7 +21,7 @@
             <%= button_to " New recipe", chats_path, turbo_method: :post, class: "nav-link fa-solid" %>
           </li>
           <li class="nav-item">
-            <%= link_to " My recipes", recipes_path, class: "nav-link fa-solid fa-book-open" %>
+            <%= link_to " My recipes", recipes_path, class: "nav-link fa-solid" %>
           </li>
           <li class="nav-item dropdown">
             <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
