--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -1,27 +1,35 @@
-<div class="d-flex flex-column h-100">
+<div class="chat-container d-flex flex-column h-100">
 
-  <div id="messages" class="overflow-y-auto">
+  <div id="messages" class="messages-area overflow-y-auto flex-grow-1">
     <% @chat.messages.each do |message| %>
       <% if message.role == "user" %>
-        <div class="d-flex justify-content-end mb-2">
-          <div class="bg-white px-3 pb-0 pt-3 rounded-pill">
+        <div class="message-wrapper user-message d-flex justify-content-end mb-4">
+          <div class="message-bubble user-bubble px-4 py-3 rounded-4">
             <%= message.content %>
           </div>
         </div>
       <% elsif message.role == "assistant" %>
-        <div class="d-flex justify-content-start mb-5">
-          <div class="px-3 pb-0 pt-3">
-              <%= raw(render_markdown(message.content)) rescue simple_format(message.content) %>
+        <div class="message-wrapper assistant-message d-flex justify-content-start mb-4">
+          <div class="message-bubble assistant-bubble px-4 py-3 rounded-4">
+            <%= raw(render_markdown(message.content)) rescue simple_format(message.content) %>
           </div>
         </div>
       <% end %>
     <% end %>
   </div>
 
-  <div class="flex-grow-1">
-    <%= simple_form_for [@chat, @message] do |f| %>
-      <%= f.input :content %>
-      <%= f.button :submit %>
+  <div class="chat-input-container mt-4">
+    <%= simple_form_for [@chat, @message], html: { class: 'chat-form' } do |f| %>
+      <div class="input-group">
+        <%= f.input :content,
+            label: false,
+            placeholder: "Ask me a recipe...",
+            input_html: { class: 'chat-input' },
+            wrapper_html: { class: 'flex-grow-1 mb-0' } %>
+        <%= f.button :submit,
+            "Send",
+            class: 'chat-submit-btn' %>
+      </div>
     <% end %>
   </div>
 
