--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,12 +1,13 @@
+
 <% if message.role == "user" %>
-  <div class="d-flex justify-content-end mb-2">
-    <div class="bg-white px-3 pb-0 pt-3 rounded-pill">
+  <div class="message-wrapper user-message d-flex justify-content-end mb-4">
+    <div class="message-bubble user-bubble px-4 py-3 rounded-4">
       <%= message.content %>
     </div>
   </div>
 <% elsif message.role == "assistant" %>
-  <div class="d-flex justify-content-start mb-5">
-    <div class="px-3 pb-0 pt-3">
+  <div class="message-wrapper assistant-message d-flex justify-content-start mb-4">
+    <div class="message-bubble assistant-bubble px-4 py-3 rounded-4">
       <%= raw(render_markdown(message.content)) rescue simple_format(message.content) %>
     </div>
   </div>
