--- a/app/assets/stylesheets/pages/_fridges.scss
+++ b/app/assets/stylesheets/pages/_fridges.scss
@@ -96,3 +96,50 @@
   margin-left: auto;
   padding-right: 15px;
 }
+.edit-form .form-section {
+  margin-top: 10px;
+}
+
+.edit-form input {
+  width: 100%;
+  margin-bottom: 10px;
+}
+.edit-btn.d-none {
+  display: none !important;
+}
+
+.inline-form input {
+  margin-bottom: 8px;
+  width: 100%;
+}
+
+
+.delete-btn {
+  text-decoration: none;
+  font-weight: bold;
+  cursor: pointer;
+  flex-shrink: 0;
+
+  width: 36px;
+  height: 36px;
+  min-width: 36px;
+  min-height: 36px;
+  max-width: 36px;
+  max-height: 36px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  line-height: 1;
+}
+
+
+.edit-form .form-section {
+  margin-top: 10px;
+  padding: 15px;
+}
+
+#delete-ingredient-btn {
+margin-left: 15px;
+height: 20px;
+}
