--- a/app/views/fridges/index.html.erb
+++ b/app/views/fridges/index.html.erb
@@ -11,23 +11,35 @@
         <h3>My ingredients</h3>
         <div class="items-list">
           <ul>
-          <% @fridge.ingredients.each do |ingredient| %>
-            <li class="ingredient-item">
-              <span class="ingredient-name"><%= ingredient.name %></span>
-              <span class="ingredient-qty"><%= ingredient.quantity %></span>
-              <button type="button" onclick="this.nextElementSibling.classList.toggle('d-none')">Edit</button>
-              <div class="d-none">
-                <%= form_with model: [@fridge, ingredient], local: true do |f| %>
-                  <%= f.text_field :name,     placeholder: "Name" %>
-                  <%= f.number_field :quantity, step: 1 %>
-                  <%= f.submit "Save" %>
-                <% end %>
-              </div>
-              <span><%= link_to "X",
-                fridge_ingredient_path(@fridge, ingredient),
-                data: { turbo_method: :delete, turbo_confirm: "Bon appétit" } %></span>
-            </li>
-          <% end %>
+            <% @fridge.ingredients.each do |ingredient| %>
+              <li class="ingredient-item">
+
+                <span class="ingredient-name"><%= ingredient.name %></span>
+                <span class="ingredient-qty"><%= ingredient.quantity %></span>
+
+                <button type="button"
+                        class="btn-primary edit-btn"
+                        onclick="this.classList.add('d-none'); this.nextElementSibling.classList.remove('d-none');">
+                  Edit
+                </button>
+                <div class="d-none edit-form">
+                  <div class="form-section inline-form">
+                    <%= form_with model: [@fridge, ingredient], local: true do |f| %>
+                      <%= f.text_field :name, placeholder: "Name", class: "input-field" %>
+                      <%= f.number_field :quantity, step: 1, class: "input-field" %>
+                      <%= f.submit "Save", class: "btn-primary" %>
+                    <% end %>
+                  </div>
+                </div>
+
+                <%= link_to "X",
+                  fridge_ingredient_path(@fridge, ingredient),
+                  id: "delete-ingredient-btn",
+                  class: "btn-primary delete-btn",
+                  data: { turbo_method: :delete, turbo_confirm: "Bon appétit" } %>
+
+              </li>
+            <% end %>
           </ul>
         </div>
       </div>
@@ -42,17 +54,23 @@
       </div>
 
     </div>
+
     <div class="ustensils-column">
 
       <div class="fridge-section utensils-section">
         <h3>My ustensils</h3>
         <div class="items-list">
           <ul>
-          <% @fridge.ustensils.each do |ustensil| %>
-            <li><%= ustensil.name %> <%= link_to "X",
-                fridge_ustensil_path(@fridge, ustensil),
-                data: { turbo_method: :delete, turbo_confirm: "Bon appétit" } %></li>
-          <% end %>
+            <% @fridge.ustensils.each do |ustensil| %>
+              <li>
+                <%= ustensil.name %>
+                <%= link_to "X",
+                  fridge_ustensil_path(@fridge, ustensil),
+                  id: "delete-ustensil-btn",
+                  class: "btn-primary delete-btn",
+                  data: { turbo_method: :delete, turbo_confirm: "Bon appétit" } %>
+              </li>
+            <% end %>
           </ul>
         </div>
       </div>
