--- a/app/assets/stylesheets/pages/_fridges.scss
+++ b/app/assets/stylesheets/pages/_fridges.scss
@@ -131,6 +131,7 @@
   justify-content: center;
   align-items: center;
   line-height: 1;
+  position: relative; top: -10px;
 }
 
 
@@ -142,4 +143,8 @@
 #delete-ingredient-btn {
 margin-left: 15px;
 height: 20px;
+}
+.edit-btn {
+  margin-left: 15px;
+  position: relative; top: -15px;
 }
